tests/codegen/fail/subscription/field_non_output_return_type.stderr
error[E0277]: the trait bound `ObjB: IsOutputType<__S>` is not satisfied
  --> fail/subscription/field_non_output_return_type.rs:15:1
   |
15 | #[graphql_subscription]
   | ^^^^^^^^^^^^^^^^^^^^^^^ the trait `IsOutputType<__S>` is not implemented for `ObjB`
   |
   = help: the following other types implement trait `IsOutputType<S>`:
             `&T` implements `IsOutputType<S>`
             `Arc<T>` implements `IsOutputType<S>`
             `Argument<'a, S>` implements `IsOutputType<S>`
             `Box<T>` implements `IsOutputType<S>`
             `EnumValue` implements `IsOutputType<__S>`
             `ID` implements `IsOutputType<__S>`
             `ObjA` implements `IsOutputType<__S>`
             `SchemaType<'a, S>` implements `IsOutputType<S>`
           and $N others
